<resources>
    <string name="app_name">Proyecto-Arce-Mall</string>
    <string name="registration_title">Registrarse</string>
    <string name="identification">Identificación*</string>
    <string name="name">Nombre*</string>
    <string name="email">Correo electrónico*</string>
    <string name="birth_date">Fecha de nacimiento*</string>
    <string name="location">Provincia</string>
    <string name="create_account">Crear cuenta</string>
    <string name="login">Iniciar Sesión</string>
    <string name="register">Registrarse</string>
    <string name="omitir"><u>Omitir</u></string>
    <string name="enter_email">Ingrese su correo electrónico</string>
    <string name="enter_password">Ingrese su contraseña</string>
    <string name="login_button">Ingresar</string>
    <string name="register_confirmation">Se envió un correo a la cuenta registrada con la contraseña para iniciar sesión</string>
    <string name="change_confirmation">Se envió un correo a la cuenta registrada confirmando el cambio de contraseña</string>
    <string name="change_password_title">Cambio de contraseña</string>
    <string name="enter_code">Ingrese el código que se envió a su correo electrónico</string>
    <string name="accept">Aceptar</string>
    <string name="continue_text">Continuar</string>
    <string name="enter_new_password">Ingrese su nueva contraseña</string>
    <string name="confirm_new_password">Confirme su contraseña</string>
    <string name="search">Buscar en Arce Shopping</string>
    <string name="homeTitle">Inicio</string>
    <string name="userTitle">Cuenta</string>
    <string name="cartTitle">Carrito</string>
    <string name="buy">Comprar</string>
    <string name="quantity">Cantidad:</string>
    <string name="forgotPassword">¿Olvidó la contraseña?</string>
    <string name="forgot_password_title">Olvido de Contraseña</string>
    <string name="pay">Pagar</string>
    <string name="cancel">Cancelar</string>
    <string name="history">Historial</string>
    <string name="logout">Cerrar sesión</string>
    <string name="FingerPrint">Biometría</string>
    <string name="history_title">Sus compras</string>
    <string name="purchase_date">Fecha:</string>
    <string name="purchase_total_price">Precio total:</string>
    <string name="purchase_view_details">Ver detalles</string>
    <string name="purchase_detail_title">Detalle de compra</string>
    <string name="purchase_detail_date">Fecha y hora de compra:</string>
    <string name="detail_product_name">Nombre:</string>
    <string name="detail_product_count">Cantidad:</string>
    <string name="detail_product_price">Precio:</string>
    <string name="purchase_product_count">Cantidad total de productos:</string>
    <string name="share">Compartir</string>
</resources>