<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="80dp"
    android:layout_gravity="center"
    android:layout_margin="5dp"
    app:cardCornerRadius="20dp"
    app:cardBackgroundColor="@color/light_orange"
    app:cardElevation="5dp"
    android:layout_marginBottom="300dp"
    android:paddingBottom="300dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/purchase_date"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:autoSizeMaxTextSize="15sp"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/carrois_gothic"
            android:maxLines="2"
            android:text="@string/purchase_date"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textFontWeight="650"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/purchase_total_price"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:autoSizeMaxTextSize="15sp"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/carrois_gothic"
            android:maxLines="2"
            android:text="@string/purchase_total_price"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textFontWeight="650"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_corners"
            android:shadowRadius="50"
            android:text="@string/purchase_view_details"
            android:textColor="@android:color/black"
            android:textFontWeight="800"
            android:textSize="12dp"/>

    </LinearLayout>



</androidx.cardview.widget.CardView>