<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="80dp"
    android:layout_gravity="center"
    android:layout_margin="5dp"
    app:cardCornerRadius="20dp"
    app:cardBackgroundColor="@color/light_orange"
    app:cardElevation="5dp"
    android:layout_marginBottom="300dp"
    android:paddingBottom="300dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/detail_product_name"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:autoSizeMaxTextSize="15sp"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/carrois_gothic"
            android:maxLines="2"
            android:text="@string/detail_product_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textFontWeight="650"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/detail_product_count"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:autoSizeMaxTextSize="15sp"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/carrois_gothic"
            android:maxLines="2"
            android:text="@string/detail_product_count"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textFontWeight="650"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/detail_product_price"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:autoSizeMaxTextSize="15sp"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/carrois_gothic"
            android:maxLines="2"
            android:text="@string/detail_product_price"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textFontWeight="650"
            android:textSize="15sp" />

    </LinearLayout>



</androidx.cardview.widget.CardView>