<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/logoViewcard"
        android:layout_width="380dp"
        android:layout_height="456dp"
        android:layout_margin="10dp"
        android:elevation="10dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="380dp"
            android:layout_height="456dp"
            android:layout_marginBottom="252dp"
            android:background="@drawable/round_corners"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/main_page_background" />
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="175dp"
        android:layout_height="52dp"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:background="@drawable/round_corners"
        android:elevation="10dp"
        android:shadowRadius="100"
        android:text="@string/login"
        android:textColor="@android:color/black"
        android:textFontWeight="900"
        android:textSize="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoViewcard" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registrationButton"
        android:layout_width="175dp"
        android:layout_height="52dp"
        android:layout_marginTop="28dp"
        android:layout_weight="1"
        android:background="@drawable/round_corners"
        android:shadowRadius="50"
        android:text="@string/register"
        android:textColor="@android:color/black"
        android:textFontWeight="800"
        android:textSize="16dp"
        android:onClick="registrationScreen"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:shadowColor="@color/orange"
        android:text="@string/omitir"
        android:textColor="@color/dark_blue"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationButton"
        app:layout_constraintVertical_bias="0.277" />
</androidx.constraintlayout.widget.ConstraintLayout>