<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_orange"
    tools:context=".ChangePasswordActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/carrois_gothic"
        android:text="@string/change_password_title"
        android:textColor="@color/dark_blue"
        android:textFontWeight="650"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enter_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="227dp"
        android:fontFamily="@font/carrois_gothic"
        android:text="@string/enter_new_password"
        android:textColor="@color/dark_blue"
        android:textFontWeight="650"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_new_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password_field"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/textinput_bg"
            android:ems="10"
            android:fontFamily="@font/carrois_gothic"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/confirm_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:fontFamily="@font/carrois_gothic"
        android:text="@string/confirm_new_password"
        android:textColor="@color/dark_blue"
        android:textFontWeight="650"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_confirm_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintTop_toBottomOf="@id/til_new_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textinput_bg"
            android:ems="10"
            android:fontFamily="@font/carrois_gothic"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="192dp"
        android:layout_height="59dp"
        android:layout_marginTop="56dp"
        android:layout_weight="1"
        android:background="@drawable/round_corners"
        android:shadowRadius="50"
        android:text="@string/login_button"
        android:textColor="@android:color/black"
        android:textFontWeight="800"
        android:textSize="18dp"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_confirm_password" />

</androidx.constraintlayout.widget.ConstraintLayout>